--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,244 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
-    background-color: #242424;
+    /*background-color: #242424;*/
      font-family:"Lato", sans-serif;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 h1 {
     font-weight: bold;
-    color: white;
+    color: rgb(10, 10, 10);
     text-align: center;
     margin-top: 24px;
     margin-bottom: 24px;
     font-size: 64px;
 }
 
+a {
+    text-decoration: none;
+    position: relative;
+    transition: opacity 300ms ease;
+}
 
+li {
+    list-style-type: none;
+}
 
 .header__img-flag {
     width: 100%;
     border-radius: 50%;
+}
+
+
+
+/*NAV*/
+nav {
+    height: 100px;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 12px;
+}
+
+.nav__link--list {
+    display: flex;
+}
+
+
+.nav__link--anchor {
+    margin: 0 12px;
+    color: #242424;
+    font-weight: 700;
+}
+
+.nav__link--anchor-primary {
+    background-color: #2835f3;
+    padding: 8px 20px;
+    border-radius: 50px;
+    color: white;
+    transition: all 300ms ease;
+}
+
+
+.nav__link--anchor-primary:hover {
+    background-color: #df0808;
+    color: white;
+}
+
+
+.fk__logo {
+    font-size: 24px;
+    color: #000000;
+    margin: 0 12px;
+    font-weight: bold;
+}
+
+/*Available Knives*/
+#available {
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.available__info {
+    isplay: flex;
+    flex-direction: column;
+}
+
+
+.available__info--container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+
+.about-me__info--title {
+    margin-bottom: 20px;
+    animation: fade-up 650ms 400ms backwards;
+}
+
+
+.available__info--para {
+    font-size: 20px;
+    margin-bottom: 28px;
+    animation: fade-up 650ms 600ms backwards;
+}
+
+@keyframes fade-up {
+    0% {
+        opacity: 0;
+        transform: translateY(40px)
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.available--container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+
+}
+
+/*Events*/
+#events {
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.events__info {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.events__info--container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+
+.events__info--title {
+    margin-bottom: 20px;
+    animation: fade-up 650ms 400ms backwards;
+}
+
+
+.events__info--para {
+    font-size: 20px;
+    margin-bottom: 28px;
+    animation: fade-up 650ms 600ms backwards;
+}
+
+
+.events--container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+
+/* Footer */
+footer {
+    background-color: #242424;
+}
+
+.footer__social--list {
+   width: 100%;
+   max-width: 500px;
+   display: flex;
+   justify-content: space-around;
+    margin-bottom: 28px; 
+}
+
+.footer__row {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 8px 0;
+}
+.footer__logo--img {
+    width: 240px;
+    height: 240px;
+
+}
+.footer__social--link,
+.footer__copyright,
+.footer__logo--popper {
+    color: white;
+}
+
+.footer__logo--popper {
+    position: absolute;
+    right: 0;
+    top: 30px;
+    font-weight: 700;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+.footer__anchor {
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.footer__anchor:hover .footer__logo--popper {
+transform: translateX(20px);
+opacity: 1;
 }
