--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,26 @@ h1 {
     font-size: 64px;
 }
 
+h2 {
+    font-family: "Merienda", sans-serif;
+    font-weight: bold;
+    color: rgb(10, 10, 10);
+    text-align: center;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    font-size: 48px;
+}
+
+h3 {
+    font-family: "Merienda", sans-serif;
+    font-weight: bold;
+    color: rgb(10, 10, 10);
+    text-align: center;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    font-size: 24px;
+}
+
 a {
     text-decoration: none;
     position: relative;
@@ -52,7 +72,7 @@ li {
 nav {
     height: 100px;
     width: 100%;
-    max-width: 1000px;
+    max-width: 2000px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -235,4 +255,13 @@ footer {
 .footer__anchor:hover .footer__logo--popper {
 transform: translateX(20px);
 opacity: 1;
+}
+
+/*Small Phones*/
+@media (max-width:480px) {
+    .available__img--list {
+        display: none;
+    }
+
+    }
 }
