--- a/styles.css
+++ b/styles.css
@@ -257,10 +257,11 @@ transform: translateX(20px);
 opacity: 1;
 }
 
-/*Small Phones*/
-@media (max-width:480px) {
+/*Small Phones, Large Phones*/
+@media (max-width:768px) {
     .available__img--list {
         flex-direction: column;
+        align-items: center;
     }
     .available__img--wrapper {
         padding: 12px 0;
